--- a/Train.ipynb
+++ b/Train.ipynb
@@ -97,6 +97,7 @@
    ],
    "source": [
     "# read data from dataset\n",
+    "\n",
     "#with open('Accents_LSTM-/Data.csv', 'r') as f:\n",
     "with open('Data.csv', 'r') as f:\n",
     "    all_accents = f.readlines()\n",
@@ -223,7 +224,6 @@
     "    if (acc != -1):\n",
     "        accents_int[i][acc] = 1        \n",
     "    else:\n",
-    "        #print(words[i])\n",
     "        ind_wa = i"
    ]
   },
@@ -639,7 +639,19 @@
    },
    "outputs": [],
    "source": [
+    "#model.save('Accents_LSTM-/my_model.h5')\n",
     "model.save('model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "files.download('Accents_LSTM-/Data.csv')\n",
+    "files.download('Accents_LSTM-/model.h5')"
    ]
   },
   {
