--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/annvix/Accents_LSTM-.git"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -11,6 +20,7 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
+    "#model = load_model('Accents_LSTM-/model.h5')\n",
     "model = load_model('model.h5')\n",
     "model.compile(optimizer='adam',\n",
     "                  loss=tf.keras.losses.CategoricalCrossentropy(from_logits=False, name='categorical_crossentropy'),\n",
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'c'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-c3a8813a3e11>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mword_int\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0malphabet\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mword_int\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword_int\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m29\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'c'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "слово   :  тараканище\n",
+      "Результат:  тарака'нище\n"
      ]
     }
    ],
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,26 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#with open('Accents_LSTM-/sentences.txt', 'r') as f:\n",
     "with open('sentences.txt', 'r') as f:\n",
     "    sent_ = f.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.shuffle(sent_)\n",
     "\n",
     "sent = sent_\n",
-    "#sent = ''.join(sent_).lower()\n",
     "\n",
-    "#no_punct_text = text_without_punct(sent)\n",
+    "no_punct_text = text_without_punct(sent)\n",
     "sent_split = no_punct_text.split('\\n')\n",
     "\n",
     "test_sent = []\n",
@@ -169,32 +176,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Мы' стреми'тельно приближа'лись к' неизве'стным кора'блям. \n",
+      "Демоне'сса бы'ла в' бе'шенстве. \n",
       "\n",
-      "Ма'кс бы'л в' приподня'том настрое'нии. \n",
+      "Мы' говори'ли о' компроми'ссе. \n",
       "\n",
-      "Ру'стам чу'ть не' запла'кал о'т доса'ды. \n",
+      "О'на скуча'ла на'д э'тим рома'ном. \n",
       "\n",
-      "О'н ше'л впереди' сво'их автома'тчиков. \n",
+      "Я' поду'мала о' ста'нке. \n",
       "\n",
-      "Она' держа'лась на' лека'рствах. \n",
+      "Ване'сса ото'шла о'т о'кна. \n",
       "\n",
-      "О'н сно'ва взгляну'л на' име'на. \n",
+      "Свяще'нник перемени'лся в' ли'це. \n",
       "\n",
-      "О'н говори'л с' я'вным акце'нтом. \n",
+      "О'н сно'ва посмотре'л на' карти'ну. \n",
       "\n",
-      "Они' прое'хали вдо'ль бульва'ра. \n",
+      "Мы' приближа'емся к' ми'ровому уро'вню. \n",
       "\n",
-      "Неве'ста бы'ла в' отчая'нии. \n",
+      "Бара'нов вы'прыгнул с' парашю'том. \n",
       "\n",
-      "Ма'рия оказа'лась на' по'лу. \n",
+      "Акинфе'ев опя'ть подпры'гнул на' ме'сте. \n",
       "\n"
      ]
     }
@@ -207,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,33 +247,13 @@
        "False"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "is_acc('фа')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'о', 'э', 'и', 'у', 'ы', 'е', 'ё', 'ю', 'я']"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vovels"
    ]
   },
   {
