--- a/Train.ipynb
+++ b/Train.ipynb
@@ -53,10 +53,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "LQNQaHhVHo6l",
-        "outputId": "06b8402b-2402-41bc-941f-3bd050867e02",
+        "outputId": "b9005809-0aab-4a7f-c324-d7f8a26c26b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 117
+          "height": 119
         }
       },
       "source": [
@@ -68,11 +68,11 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'Accents_LSTM-'...\n",
-            "remote: Enumerating objects: 59, done.\u001b[K\n",
-            "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (50/50), done.\u001b[K\n",
-            "remote: Total 59 (delta 24), reused 34 (delta 8), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (59/59), done.\n"
+            "remote: Enumerating objects: 65, done.\u001b[K\n",
+            "remote: Counting objects: 100% (65/65), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (56/56), done.\u001b[K\n",
+            "remote: Total 65 (delta 27), reused 34 (delta 8), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (65/65), done.\n"
           ],
           "name": "stdout"
         }
@@ -94,6 +94,8 @@
         "from tensorflow.keras.layers import LSTM\n",
         "from tensorflow.keras.layers import Dropout\n",
         "from tensorflow.keras.layers import Embedding\n",
+        "\n",
+        "from tensorflow.keras.models import load_model\n",
         "\n",
         "from tensorflow.keras.preprocessing import sequence\n",
         "\n",
@@ -120,10 +122,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "yV7Yax7VHe3l",
-        "outputId": "144e5bde-6d4d-43d8-876e-88b71d527afe",
+        "outputId": "4840d731-94db-4b5c-dcad-d20efacf6974",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 33
+          "height": 34
         }
       },
       "source": [
@@ -136,7 +138,7 @@
         "\n",
         "print('Всего слов:', data_len)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,6 +148,29 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U5L-tq8Jpb-p",
+        "colab_type": "text"
+      },
+      "source": [
+        "Количество слов для вывода"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R8JFWO2KpT7u",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "N = 10"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -218,10 +243,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "oIakmNvjHe3u",
-        "outputId": "d4cfd9dd-c207-456f-fa5b-951d3c1d1cfd",
+        "outputId": "8acfbc46-0f3b-4f00-f8dc-fbf5de3624b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 51
         }
       },
       "source": [
@@ -304,14 +329,14 @@
       "metadata": {
         "colab_type": "code",
         "id": "S8zoLNYhHe33",
-        "outputId": "68f67707-199f-49ee-ce60-028879c52f0e",
+        "outputId": "29fc5ae6-c5b3-42bc-97c4-4f2c540694a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
-        "for i in range(10):\n",
+        "for i in range(N):\n",
         "    print('Слово:    ', words[i * 100000])\n",
         "    print('Ударение: ', accents[i * 100000])\n",
         "    print('Вектор:   ', words_int[i * 100000])\n",
@@ -323,75 +348,75 @@
         "print('Вектор:  ', words_int[ind_wa])\n",
         "print('Ударение:', accents_int[ind_wa])\n"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Слово:     реваншах\n",
-            "Ударение:  рев'аншах\n",
-            "Вектор:    [18  6  3  1 15 26  1 23  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "Слово:     гуменниками\n",
+            "Ударение:  гум'енниками\n",
+            "Вектор:    [ 4 21 14  6 15 15 10 12  1 14 10  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "  0  0  0  0  0]\n",
             "Ударение:  [0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
             "\n",
-            "Слово:     благоустраиваемся\n",
-            "Ударение:  благоустр'аиваемся\n",
-            "Вектор:    [ 2 13  1  4 16 21 19 20 18  1 10  3  1  6 14 19 33  0  0  0  0  0  0  0\n",
-            "  0  0  0  0  0]\n",
-            "Ударение:  [0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            "\n",
-            "Слово:     прирастающая\n",
-            "Ударение:  прираст'ающая\n",
-            "Вектор:    [17 18 10 18  1 19 20  1 32 27  1 33  0  0  0  0  0  0  0  0  0  0  0  0\n",
-            "  0  0  0  0  0]\n",
-            "Ударение:  [0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            "\n",
-            "Слово:     стилизовалась\n",
-            "Ударение:  стилизов'алась\n",
-            "Вектор:    [19 20 10 13 10  9 16  3  1 13  1 19 30  0  0  0  0  0  0  0  0  0  0  0\n",
-            "  0  0  0  0  0]\n",
-            "Ударение:  [0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            "\n",
-            "Слово:     огрубила\n",
-            "Ударение:  огруб'ила\n",
-            "Вектор:    [16  4 18 21  2 10 13  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
-            "  0  0  0  0  0]\n",
-            "Ударение:  [0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            "\n",
-            "Слово:     продержавшая\n",
-            "Ударение:  продерж'авшая\n",
-            "Вектор:    [17 18 16  5  6 18  8  1  3 26  1 33  0  0  0  0  0  0  0  0  0  0  0  0\n",
-            "  0  0  0  0  0]\n",
-            "Ударение:  [0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            "\n",
-            "Слово:     бредила\n",
-            "Ударение:  бр'едила\n",
-            "Вектор:    [ 2 18  6  5 10 13  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "Слово:     бражничающими\n",
+            "Ударение:  бр'ажничающими\n",
+            "Вектор:    [ 2 18  1  8 15 10 25  1 32 27 10 14 10  0  0  0  0  0  0  0  0  0  0  0\n",
             "  0  0  0  0  0]\n",
             "Ударение:  [0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
             "\n",
-            "Слово:     намолачивающего\n",
-            "Ударение:  намол'ачивающего\n",
-            "Вектор:    [15  1 14 16 13  1 25 10  3  1 32 27  6  4 16  0  0  0  0  0  0  0  0  0\n",
+            "Слово:     дэмарксизация\n",
+            "Ударение:  дэмарксиз'ация\n",
+            "Вектор:    [ 5 31 14  1 18 12 19 10  9  1 24 10 33  0  0  0  0  0  0  0  0  0  0  0\n",
+            "  0  0  0  0  0]\n",
+            "Ударение:  [0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "\n",
+            "Слово:     междуречному\n",
+            "Ударение:  междур'ечному\n",
+            "Вектор:    [14  6  8  5 21 18  6 25 15 16 14 21  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "  0  0  0  0  0]\n",
+            "Ударение:  [0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "\n",
+            "Слово:     матереющим\n",
+            "Ударение:  матер'еющим\n",
+            "Вектор:    [14  1 20  6 18  6 32 27 10 14  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "  0  0  0  0  0]\n",
             "Ударение:  [0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
             "\n",
-            "Слово:     рассудке\n",
-            "Ударение:  расс'удке\n",
-            "Вектор:    [18  1 19 19 21  5 12  6  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "Слово:     пашами\n",
+            "Ударение:  паш'ами\n",
+            "Вектор:    [17  1 26  1 14 10  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "  0  0  0  0  0]\n",
+            "Ударение:  [0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "\n",
+            "Слово:     секретная\n",
+            "Ударение:  секр'етная\n",
+            "Вектор:    [19  6 12 18  6 20 15  1 33  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "  0  0  0  0  0]\n",
             "Ударение:  [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
             "\n",
-            "Слово:     щуплости\n",
-            "Ударение:  щ'уплости\n",
-            "Вектор:    [27 21 17 13 16 19 20 10  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "Слово:     общинников\n",
+            "Ударение:  общ'инников\n",
+            "Вектор:    [16  2 27 10 15 15 10 12 16  3  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "  0  0  0  0  0]\n",
-            "Ударение:  [0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "Ударение:  [0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "\n",
+            "Слово:     классовость\n",
+            "Ударение:  кл'ассовость\n",
+            "Вектор:    [12 13  1 19 19 16  3 16 19 20 30  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "  0  0  0  0  0]\n",
+            "Ударение:  [0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "\n",
+            "Слово:     зачинщицы\n",
+            "Ударение:  зач'инщицы\n",
+            "Вектор:    [ 9  1 25 10 15 27 10 24 29  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "  0  0  0  0  0]\n",
+            "Ударение:  [0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
             "\n",
             "\n",
             "\t\t\t Слово без ударения:\n",
-            "Слово:    тсс\n",
-            "Вектор:   [20 19 19  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+            "Слово:    мм\n",
+            "Вектор:   [14 14  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
             "  0  0  0  0  0]\n",
             "Ударение: [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
           ],
@@ -443,10 +468,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "zN-XhEJfHe37",
-        "outputId": "fced3fcd-60d6-41aa-deeb-5b1874c25827",
+        "outputId": "57d4d398-0884-4633-b5fb-c35976704c86",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 85
         }
       },
       "source": [
@@ -455,7 +480,7 @@
         "      \"\\nValidation set: \\t{}\".format(val_x.shape),\n",
         "      \"\\nTest set: \\t\\t{}\".format(test_x.shape))"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +510,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Lpt4GYSTRwn4",
-        "outputId": "17a67857-a5eb-42a9-99ed-087ceec628b8",
+        "outputId": "7bb4434d-d13a-4ff7-fa5e-cdd653fa9009",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -495,7 +520,7 @@
         "max_features = len(alphabet) + 1\n",
         "max_features"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +532,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 15
         }
       ]
     },
@@ -740,6 +765,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "EPfViP3ct7GH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = load_model('Accents_LSTM-/model.h5')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab_type": "code",
         "id": "tkKAUrmnTiW3",
         "colab": {}
@@ -786,27 +824,23 @@
       "metadata": {
         "id": "TcdXThQIfI5U",
         "colab_type": "code",
+        "outputId": "cfe1812f-2742-4de6-92cf-884bc77878f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 161
-        },
-        "outputId": "4a735277-eb76-4a1d-ae20-5f886918b691"
+          "height": 34
+        }
       },
       "source": [
         "print('Точность на тестовой выборке: ',test_accur)"
       ],
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-77720167d5a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Точность на тестовой выборке: '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_accur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'test_accur' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Точность на тестовой выборке:  0.8641228284368319\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -852,8 +886,11 @@
         "scrolled": true,
         "id": "Ba70E0BTfI5Z",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a4f11658-586d-4e1a-b120-0f463900425c"
+        "outputId": "c57010cd-eb2b-44ef-e42a-ca6e981a497d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 408
+        }
       },
       "source": [
         "for i in range(10):\n",
@@ -865,44 +902,41 @@
         "            break\n",
         "    template = slovo[:test_y[i].argmax() + 1] + '\\'' + slovo[test_y[i].argmax() + 1:]\n",
         "    nn_sample = slovo[:acc_pred[i].argmax() + 1] + '\\'' + slovo[acc_pred[i].argmax() + 1:]\n",
-        "    print('Эталон   : ' , template)\n",
-        "    print('Результат: ' , nn_sample)\n",
+        "    \n",
+        "    if (acc_pred[i].argmax() != test_y[i].argmax()):\n",
+        "      print('Эталон   : ' , template)\n",
+        "      print('Результат: ' , nn_sample)\n",
+        "    else:\n",
+        "      print('Результат: ' , nn_sample)\n",
         "    print()"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Эталон   :  кочетко'ву\n",
-            "Результат:  кочетко'ву\n",
+            "Результат:  летописа'ние\n",
             "\n",
-            "Эталон   :  пружи'нясь\n",
-            "Результат:  пружиня'сь\n",
+            "Результат:  подоше'дшими\n",
             "\n",
-            "Эталон   :  валтаса'р\n",
-            "Результат:  валтаса'р\n",
+            "Эталон   :  вьюро'к\n",
+            "Результат:  вью'рок\n",
             "\n",
-            "Эталон   :  облицу'ем\n",
-            "Результат:  облицу'ем\n",
+            "Результат:  коммутати'вна\n",
             "\n",
-            "Эталон   :  приво'лжью\n",
-            "Результат:  приво'лжью\n",
+            "Эталон   :  на'глая\n",
+            "Результат:  нагла'я\n",
             "\n",
-            "Эталон   :  раскла'дывалось\n",
-            "Результат:  раскла'дывалось\n",
+            "Результат:  выбыва'вшей\n",
             "\n",
-            "Эталон   :  сле'пнет\n",
-            "Результат:  слепне'т\n",
+            "Результат:  очерствля'ете\n",
             "\n",
-            "Эталон   :  верстака'м\n",
-            "Результат:  верста'кам\n",
+            "Результат:  поме'шанному\n",
             "\n",
-            "Эталон   :  опро'бованною\n",
-            "Результат:  опро'бованною\n",
+            "Эталон   :  скобяна'я\n",
+            "Результат:  скобя'ная\n",
             "\n",
-            "Эталон   :  сле'нге\n",
-            "Результат:  сле'нге\n",
+            "Результат:  артдивизио'нов\n",
             "\n"
           ],
           "name": "stdout"
