Updated using Colaboratory

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -54,10 +54,10 @@
       "metadata": {
         "id": "A3-S9t2ffHiy",
         "colab_type": "code",
-        "outputId": "1f8cd79e-f1da-479a-e330-085248914b5f",
+        "outputId": "7e7b54c4-7718-428e-8757-779d992e90df",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 136
         }
       },
       "source": [
@@ -69,11 +69,12 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'Accents_LSTM-'...\n",
-            "remote: Enumerating objects: 71, done.\u001b[K\n",
-            "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (62/62), done.\u001b[K\n",
-            "remote: Total 71 (delta 30), reused 35 (delta 8), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (71/71), done.\n"
+            "remote: Enumerating objects: 20, done.\u001b[K\n",
+            "remote: Counting objects:   5% (1/20)\u001b[K\rremote: Counting objects:  10% (2/20)\u001b[K\rremote: Counting objects:  15% (3/20)\u001b[K\rremote: Counting objects:  20% (4/20)\u001b[K\rremote: Counting objects:  25% (5/20)\u001b[K\rremote: Counting objects:  30% (6/20)\u001b[K\rremote: Counting objects:  35% (7/20)\u001b[K\rremote: Counting objects:  40% (8/20)\u001b[K\rremote: Counting objects:  45% (9/20)\u001b[K\rremote: Counting objects:  50% (10/20)\u001b[K\rremote: Counting objects:  55% (11/20)\u001b[K\rremote: Counting objects:  60% (12/20)\u001b[K\rremote: Counting objects:  65% (13/20)\u001b[K\rremote: Counting objects:  70% (14/20)\u001b[K\rremote: Counting objects:  75% (15/20)\u001b[K\rremote: Counting objects:  80% (16/20)\u001b[K\rremote: Counting objects:  85% (17/20)\u001b[K\rremote: Counting objects:  90% (18/20)\u001b[K\rremote: Counting objects:  95% (19/20)\u001b[K\rremote: Counting objects: 100% (20/20)\u001b[K\rremote: Counting objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Total 115 (delta 7), reused 0 (delta 0), pack-reused 95\u001b[K\n",
+            "Receiving objects: 100% (115/115), 21.41 MiB | 16.93 MiB/s, done.\n",
+            "Resolving deltas: 100% (56/56), done.\n"
           ],
           "name": "stdout"
         }
@@ -92,8 +93,7 @@
         "import random\n",
         "import numpy as np\n",
         "\n",
-        "model = load_model('Accents_LSTM-/model.h5')\n",
-        "#model = load_model('model.h5')\n",
+        "model = load_model('Accents_LSTM-/Unet_model.h5')\n",
         "model.compile(optimizer='adam',\n",
         "                  loss=tf.keras.losses.CategoricalCrossentropy(from_logits=False, name='categorical_crossentropy'),\n",
         "                  metrics=['accuracy'])"
@@ -125,7 +125,8 @@
         "             'ъ' : 28, 'ы' : 29, 'ь' : 30, 'э' : 31, 'ю' : 32, 'я' : 33}\n",
         "\n",
         "vovels = ['а', 'о', 'э', 'и', 'у', 'ы', 'е', 'ё', 'ю', 'я']\n",
-        "max_len = 29"
+        "max_len = 29\n",
+        "number_of_classes = max_len + 1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -174,12 +175,12 @@
         "colab": {}
       },
       "source": [
-        "def is_acc (w):\n",
-        "    for i in w:\n",
-        "        if i in vovels: \n",
-        "            return True\n",
-        "            break\n",
-        "    return False"
+        "# def is_acc (w):\n",
+        "#     for i in w:\n",
+        "#         if i in vovels: \n",
+        "#             return True\n",
+        "#             break\n",
+        "#     return False"
       ],
       "execution_count": 0,
       "outputs": []
@@ -235,7 +236,7 @@
       "metadata": {
         "id": "AGOX4hMsfHjE",
         "colab_type": "code",
-        "outputId": "aa51a1af-3329-4c34-e931-41cc24590aae",
+        "outputId": "ff20bec8-d161-4155-9f74-a73ce125ef5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -243,30 +244,30 @@
       },
       "source": [
         "word = 'тараканище'\n",
-        "#word = 'бррр'\n",
-        "if is_acc(word):\n",
-        "  word_int = np.zeros((max_len), dtype=int)\n",
+        "#word = 'хм'\n",
+        "#if is_acc(word):\n",
+        "word_int = np.zeros((number_of_classes), dtype=int)\n",
         "\n",
-        "  for i in range(len(word)):\n",
-        "    word_int[i]= alphabet[word[i]]\n",
-        "    \n",
-        "  word_int = np.reshape(word_int, [1,29])\n",
-        "  acc_pred = model.predict(word_int)\n",
+        "for i in range(len(word)):\n",
+        "  word_int[i]= alphabet[word[i]]\n",
         "\n",
-        "  for i in range(1):\n",
-        "    slovo = ''\n",
-        "    for j in range(len(word_int[i])):\n",
-        "        if word_int[i][j] != 0:\n",
-        "            slovo = slovo + get_key(alphabet, word_int[i][j])\n",
-        "        else:\n",
-        "            break\n",
-        "    nn_sample = slovo[:acc_pred[i].argmax()+1] + '\\'' + slovo[acc_pred[i].argmax()+1:]\n",
-        "    print('слово    : ' , slovo)\n",
-        "    print('Результат: ' , nn_sample)\n",
-        "else:\n",
-        "  print('В этом слове нет ударения:', word)"
+        "word_int = np.reshape(word_int, (1, word_int.shape[0], 1))    \n",
+        "acc_pred = model.predict(word_int)\n",
+        "\n",
+        "for i in range(1):\n",
+        "  slovo = ''\n",
+        "  for j in range(len(word_int[i])):\n",
+        "      if word_int[i][j] != 0:\n",
+        "          slovo = slovo + get_key(alphabet, word_int[i][j])\n",
+        "      else:\n",
+        "          break\n",
+        "  nn_sample = slovo[:acc_pred[i].argmax()+1] + \"'\" + slovo[acc_pred[i].argmax()+1:]\n",
+        "  print('слово    : ' , slovo)\n",
+        "  print('Результат: ' , nn_sample)\n",
+        "#else:\n",
+        "#print('В этом слове нет ударения:', word)"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,11 +303,11 @@
         "    no_punct_text = text_without_punct(str)\n",
         "    str_ls = ''.join(no_punct_text).lower()\n",
         "    str_ls = str_ls.split()\n",
-        "    str_sent_int = np.zeros((len(str_ls),max_len), dtype=int)\n",
+        "    str_sent_int = np.zeros((len(str_ls), number_of_classes, 1), dtype=int)\n",
         "    for i in range(len(str_ls)):\n",
         "        for j in range(len(str_ls[i])):\n",
         "            str_sent_int[i][j]= alphabet[str_ls[i][j]]\n",
-        "\n",
+        "    \n",
         "    # предсказывание ударения\n",
         "    acc_pred = model.predict(str_sent_int)\n",
         "\n",
@@ -314,11 +315,12 @@
         "    final_sent_ = str.split()\n",
         "    final = ''\n",
         "    for i in range(len(str_ls)):\n",
-        "      if is_acc(str_ls[i]):\n",
-        "        final = final + final_sent_[i][:acc_pred[i].argmax()+1] + '\\'' + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
-        "      else:\n",
-        "        final = final + final_sent_[i][:acc_pred[i].argmax()+1] + '' + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
-        "    \n",
+        "      #if is_acc(str_ls[i]):\n",
+        "      #  final = final + final_sent_[i][:acc_pred[i].argmax()+1] + \"'\" + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
+        "      #else:\n",
+        "      #  final = final + final_sent_[i][:acc_pred[i].argmax()+1] + '' + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
+        "      final = final + final_sent_[i][:acc_pred[i].argmax()+1] + \"'\" + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
+        "\n",
         "    print (final)\n",
         "    return final"
       ],
@@ -340,7 +342,7 @@
       "metadata": {
         "id": "Olnj1GvjfHjK",
         "colab_type": "code",
-        "outputId": "62ef13de-38b5-4a9c-c158-c14ef49ebb4a",
+        "outputId": "139a2236-53c2-4a94-ab08-0eb8c0ed8f14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -348,14 +350,14 @@
       },
       "source": [
         "test = 'В России зимой бывает много снега.'\n",
-        "my_test = acc_in_sent(test)"
+        "test_acc = acc_in_sent(test)"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "В Ро'ссии зи'мой быва'ет мно'го сне'га. \n"
+            "В' Ро'ссии зи'мой бы'вает мно'го сне'га. \n"
           ],
           "name": "stdout"
         }
@@ -380,7 +382,6 @@
       },
       "source": [
         "with open('Accents_LSTM-/sentences.txt', 'r') as f:\n",
-        "#with open('sentences.txt', 'r') as f:\n",
         "    sent_ = f.readlines()"
       ],
       "execution_count": 0,
@@ -413,7 +414,7 @@
       "metadata": {
         "id": "z4wL_7m8fHjR",
         "colab_type": "code",
-        "outputId": "da3526de-612c-4ee2-db64-e80744112afe",
+        "outputId": "03b9f4d2-16d5-4d87-fb27-e9b92a1b762f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
@@ -424,30 +425,30 @@
         "    acc_in_sent(test_sent[k])\n",
         "    print()"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "О'ни нико'гда не' прибега'ли к подо'бным мето'дам. \n",
+            "Мы' карабка'лись че'рез руи'ны. \n",
             "\n",
-            "О'на находи'лась на' пра'вом фла'нге. \n",
+            "Он'и не' шли' по' наши'м земля'м. \n",
             "\n",
-            "Я' расте'рянно посмотре'л на' Людми'лу. \n",
+            "Я' раздумыва'л насче'т па'пы. \n",
             "\n",
-            "Ви'ка прие'хала на' сле'дующий де'нь. \n",
+            "Мэ'ри неохотн'о задержа'лась на' поро'ге. \n",
             "\n",
-            "Э'тьен жи'л в по'лном дово'льстве; \n",
+            "Он' не'сся к' ближа'йшей лестни'це. \n",
             "\n",
-            "Рича'рд покоси'лся на' Джейсо'на. \n",
+            "Он' подробн'о отве'тил на' мо'й во'прос. \n",
             "\n",
-            "О'н пото'м закоси'л по'д ду'рочка. \n",
+            "Он' раздава'лся из' ва'нной. \n",
             "\n",
-            "О'на сле'гка раска'чивалась в кача'лке. \n",
+            "Я' ед'ва не' пада'л из' се'дла. \n",
             "\n",
-            "Полко'вник вы'шел и'з маши'ны. \n",
+            "Купе'р посмотре'л вс'лед уходя'щему полице'йскому. \n",
             "\n",
-            "Прима'ков не' акценти'ровал на' э'том внима'ния. \n",
+            "Мы' прорва'лись че'рез перебо'рку. \n",
             "\n"
           ],
           "name": "stdout"
